trying fix stupid contrast

--- a/src/freestyle.css
+++ b/src/freestyle.css
@@ -296,16 +296,19 @@ main{
 .content-main{
     width: 70%;
     height: 100%;
-    border: 1px solid red;
+    border: 0px solid red;
     padding: 10px;
     padding-bottom: 40px;
+    padding-top: 0px;
 }
 
 /* RIGHT BAR */
 
 .content-right{
 width: 15%;
-padding : 10px;
+padding : 0px;
+border: 0px solid rgb(1, 199, 172);
+
 }
 
 .inicio{
